feat:added image qr endpoints
